--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,18 @@ body {
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: column
+    vertical-align: bottom;
+}
+
+img {
+    width: 100%;
+}
+
+#logo{
+    width: 10%;
+    img{
+        margin-left: 45%;
+    }
 }
 
 h1 {
@@ -19,12 +29,21 @@ h1 {
     padding-top: 1rem;
 }
 
-#button {
+nav .container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin: 0 1rem 2rem 1rem;
-    gap: 1rem;
+    align-items: center;
+}
+
+#button {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#button a{
+    margin-right: 1rem;
 }
 
 
@@ -52,8 +71,4 @@ table td {
 #addButton {
     width: 90%;
     margin : 0 auto;
-}
-
-footer p{
-    margin-left: auto;
 }
